methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:28: error: '=' expected but ';' found.
  var c;Int=0
       ^